--- a/client/src/MainPage/MainPage.module.scss
+++ b/client/src/MainPage/MainPage.module.scss
@@ -2,4 +2,19 @@
   display: grid;
   justify-content: center;
   row-gap: 32px;
+
+  .make-container {
+    & > input {
+      width: 228px;
+      height: 38px;
+    }
+    & > button {
+      background-color: skyblue;
+      border-style: hidden;
+      height: 42px;
+      &:hover {
+        outline-style: outset;
+      }
+    }
+  }
 }
